Updates for building.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include LICENSE README.md runtests.py
-recursive-include timelinejs *.py *.html *.css *.png *.gif
+recursive-include timelinejs *.py *.html *.css *.png *.gif *.js
